# uav-mission-performance-estimator

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  styles.css
app/: streamlit_app.py
configs/: example_fixed_wing.yaml  example_fixed_wing_custom.yaml  example_fixed_wing_fast.yaml  example_fixed_wing_long_range.yaml  mission_baseline.yaml  mission_loiter.yaml  mission_windy.yaml
js/: app.js  configs.js
src/uav_mpe/: atmosphere.py  climb.py  comparison.py  descent.py  exporting.py  main.py  mission.py  mission_profile.py  mission_profile_export.py  mission_profile_plotting.py  mission_scenario_comparison.py  mission_scenario_plotting.py  models.py  operating_points.py  performance.py  plotting.py  sweeps.py
src/uav_mpe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_atmosphere.py  test_climb.py  test_comparison.py  test_config_driven_mission_profile.py  test_descent.py  test_exporting.py  test_mission.py  test_mission_profile.py  test_mission_profile_export.py  test_mission_profile_plotting.py  test_mission_scenario_comparison.py  test_mission_scenario_plotting.py  test_operating_points.py  test_performance.py  test_plotting.py  test_smoke.py  test_sweeps.py
